Fixed decimal display length

--- a/views/penrose/order.html
+++ b/views/penrose/order.html
@@ -12,8 +12,8 @@
 	   	<tbody>
 	   		{{#products}}
 	   		<tr>
-				<td id="product_{{id}}">{{product}}</td>
-	   			<td id="desc_{{id}}">{{desc}}</td>
+				<td id="product_{{id}}">{{prod_code}}</td>
+	   			<td id="desc_{{id}}">{{prod_desc}}</td>
 	   			<td id="unit_{{id}}">{{unit}}</td>
 	   			<td id="price_{{id}}">{{price}}</td>
 	   			<td><input class="order-quantity" id="order_{{id}}" onblur="validateQuantity(this)" type="text"/></td>
