Converted to sending JSON data

--- a/views/dashboard/index.html
+++ b/views/dashboard/index.html
@@ -75,7 +75,9 @@
         </nav>
 
         <div id="page-wrapper">
-
+            <div id="customer" class="hidden">
+                <p id="customer-code"></p>
+            </div>
             <div class="container-fluid">
                 <div id="main-content">
                 </div>
