--- a/views/penrose/open_orders.html
+++ b/views/penrose/open_orders.html
@@ -13,7 +13,7 @@
    				<tr>
 		   			<td><a href="javascript:void(0)" onclick="getOrderDetail(this.innerHTML)" class="detail-link">{{order_id}}</a></td>
    					<td>{{order_date}}</td>
-   					<td>{{type}}</td>
+   					<td>{{delivery_method}}</td>
    					<td>${{total_price}}</td>
    				</tr>
                {{/orders}}
