--- a/views/dashboard/css/styles.css
+++ b/views/dashboard/css/styles.css
@@ -15,3 +15,11 @@
 .back-button {
 	padding-left: 15px;
 }
+
+#login-div {
+	width: 20%;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 10%;
+	margin-bottom: 10%;
+}
