Added user_id support

--- a/views/penrose/index.html
+++ b/views/penrose/index.html
@@ -103,7 +103,7 @@
 
 		<header class="header-simple">
 			<h2 class="header-fade fade-in">Online Ordering</h2>
-			<p id="customer-code"></p>
+			<p id="user-id" class="hidden"></p>
 		</header>
 
 		<!-- BEER LISTING -->
