--- a/views/penrose/order_detail.html
+++ b/views/penrose/order_detail.html
@@ -3,8 +3,8 @@
 		<a class="back-button" href="javascript:void(0)" onclick="getOpenOrders();" align="left">&lt;&lt; Back</a>
 	</div>
 
-	<h4>Order #{{orderNumber}}</h4><br>
-	<p>{{deliveryMethod}} {{deliveryDate}}</p>
+	<h4>Order #{{id}}</h4><br>
+	<p>{{delivery_method}} {{delivery_date}}</p>
 
 	<table id="order-table"> 
 		<thead>
@@ -17,20 +17,20 @@
 			</tr>
 		</thead>
 		<tbody>
-			{{#lines}}
+			{{#order_details}}
 			<tr>
-				<td>{{product}}</td>
-				<td>{{desc}}</td>
-				<td>{{unit}}</td>
+				<td>{{product_code}}</td>
+				<td>{{product_description}}</td>
+				<td>{{unit_code}}</td>
 				<td>${{price}}</td>
 				<td>{{quantity}}</td>
 			</tr>
-			{{/lines}}
+			{{/order_details}}
 		</tbody>
 	</table>
 
 	<div class="total" align="right">
-		<p><b>Total: ${{orderTotal}}</b><p>
+		<p><b>Total: ${{order_total}}</b><p>
 	</div>
 
 	<script type="text/javascript">
