--- a/views/penrose/cart.html
+++ b/views/penrose/cart.html
@@ -8,20 +8,22 @@
 					<th>Unit</th>
 					<th>Price</th>
 					<th>Quantity</th>
+					<th>&nbsp;</th>
 				</tr>
 				{{#lines}}
-				<tr>
+				<tr id="line_{{line_id}}">
 		  			<td>{{product_code}}</td>
 					<td>{{product_description}}</td>
 					<td>{{unit_description}}</td>
-					<td>${{price}}</td>
-					<td>{{quantity}}</td>
+					<td class="price">${{price}}</td>
+					<td class="quantity">{{quantity}}</td>
+					<td><a href="javascript:void(0)" onclick="deleteLine({{line_id}})">Delete</a></td>
 				</tr>
 				{{/lines}}
 	   		</table>
 
 	   		<div class="total" align="right">
-	   			<p><b>Total: ${{total_price}}</b><p>
+	   			<p><b>Total: $<span id="total-price">{{total_price}}</span></b><p>
 	   		</div>
 	   	</div>
 
